--- a/index.html
+++ b/index.html
@@ -152,13 +152,13 @@
         <div class="line nav"></div>
         <div class="right-align-div">
           <div class="mobile-menu-middle-div">
-            <a href="https://calma-website.webflow.io/about#ceo-message" class="page-link w-inline-block">
+            <a href="about.html#ceo-message" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading arabic">كلمة رئيس مجلس الإدارة</h4>
             </a>
-            <a href="https://calma-website.webflow.io/about#leadership" class="page-link w-inline-block">
+            <a href="about.html#leadership" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading arabic">القيادة</h4>
             </a>
-            <a href="https://calma-website.webflow.io/about#corporate-culture" class="page-link w-inline-block">
+            <a href="about.html#corporate-culture" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading arabic">ثقافة الشركة</h4>
             </a>
             <a href="guarantees.html" class="page-link w-inline-block">
@@ -380,7 +380,7 @@
               </div>
               <div class="center-logo-calma"><img src="images/FULL-LOCKUP-07.png" loading="lazy" sizes="100vw" srcset="images/FULL-LOCKUP-07-p-500.png 500w, images/FULL-LOCKUP-07-p-800.png 800w, images/FULL-LOCKUP-07-p-1080.png 1080w, images/FULL-LOCKUP-07-p-1600.png 1600w, images/FULL-LOCKUP-07-p-2000.png 2000w, images/FULL-LOCKUP-07-p-2600.png 2600w, images/FULL-LOCKUP-07-p-3200.png 3200w, images/FULL-LOCKUP-07.png 4953w" alt="" class="image"></div>
               <div class="center-button-wrapper">
-                <a data-w-id="1bb70f99-1577-4d92-1000-b95ac0c49f3e" href="https://calma-website.webflow.io/about#vision" class="button grey arabic w-button">تعرف على رؤيتنا</a>
+                <a data-w-id="1bb70f99-1577-4d92-1000-b95ac0c49f3e" href="about.html#vision" class="button grey arabic w-button">تعرف على رؤيتنا</a>
               </div>
             </div>
           </div>
@@ -498,7 +498,7 @@
             <div class="left-align-div arabic">
               <div class="corpoorate-para-wrapper">
                 <p class="paragraph dark arabic"> خلف كل مشروع من مشاريع كالما ثقافة راسخة من التفرد اللامحدود والتميز الهادف  يعمل فريقنا على بناء ما هو أكثر من مباني كل يوم عن طريق بناء مجتمعات متكاملة وتصميم مساحات بعناية تامة لتمنح قيمة دائمة عبر الزمن.</p>
-                <a data-w-id="b7d80389-44d3-0d89-b348-c101c71dc929" href="https://calma-website.webflow.io/about#corporate-culture" class="button dark arabic w-button">تعرف على ثقافتنا</a>
+                <a data-w-id="b7d80389-44d3-0d89-b348-c101c71dc929" href="about.html#corporate-culture" class="button dark arabic w-button">تعرف على ثقافتنا</a>
               </div>
             </div>
           </div>
@@ -568,13 +568,13 @@
           <a href="guarantees.html" class="footer-text-div w-inline-block">
             <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> الضمانات</h4>
           </a>
-          <a href="https://calma-website.webflow.io/about#corporate-culture" class="footer-text-div w-inline-block">
+          <a href="about.html#corporate-culture" class="footer-text-div w-inline-block">
             <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">ثقافة الشركة</h4>
           </a>
-          <a href="https://calma-website.webflow.io/about#leadership" class="footer-text-div w-inline-block">
+          <a href="about.html#leadership" class="footer-text-div w-inline-block">
             <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d leadership">القيادة</h4>
           </a>
-          <a href="https://calma-website.webflow.io/about#ceo-message" class="footer-text-div w-inline-block">
+          <a href="about.html#ceo-message" class="footer-text-div w-inline-block">
             <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d ceo">كلمة رئيس مجلس الإدارة</h4>
           </a>
         </div>
