--- a/brochures.html
+++ b/brochures.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
+﻿<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="688b015adb6496bd8879a40e" data-wf-site="687744ac7f4aefd284fc3f12">
 <head>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
   <link href="css/calma-website.webflow.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.jpg" rel="apple-touch-icon">`n  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>`n  <script type="module">`n    import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';`n    inject();`n  </script>
+  <link href="images/webclip.jpg" rel="apple-touch-icon">  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>  <script type="module">    import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';   inject();  </script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
   // Initialize Lenis on the #scroll-container div
@@ -102,13 +102,13 @@
         <div class="line nav"></div>
         <div class="right-align-div">
           <div class="mobile-menu-middle-div">
-            <a href="https://calma-website.webflow.io/about#ceo-message" class="page-link w-inline-block">
+            <a href="about.html#ceo-message" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading arabic">كلمة رئيس مجلس الإدارة</h4>
             </a>
-            <a href="https://calma-website.webflow.io/about#leadership" class="page-link w-inline-block">
+            <a href="about.html#leadership" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading arabic">القيادة</h4>
             </a>
-            <a href="https://calma-website.webflow.io/about#corporate-culture" class="page-link w-inline-block">
+            <a href="about.html#corporate-culture" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading arabic">ثقافة الشركة</h4>
             </a>
             <a href="guarantees.html" class="page-link w-inline-block">
@@ -248,13 +248,13 @@
       <a href="guarantees.html" class="footer-text-div w-inline-block">
         <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> الضمانات</h4>
       </a>
-      <a href="https://calma-website.webflow.io/about#corporate-culture" class="footer-text-div w-inline-block">
+      <a href="about.html#corporate-culture" class="footer-text-div w-inline-block">
         <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">ثقافة الشركة</h4>
       </a>
-      <a href="https://calma-website.webflow.io/about#leadership" class="footer-text-div w-inline-block">
+      <a href="about.html#leadership" class="footer-text-div w-inline-block">
         <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d leadership">القيادة</h4>
       </a>
-      <a href="https://calma-website.webflow.io/about#ceo-message" class="footer-text-div w-inline-block">
+      <a href="about.html#ceo-message" class="footer-text-div w-inline-block">
         <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d ceo">كلمة رئيس مجلس الإدارة</h4>
       </a>
     </div>
