--- a/en/contact.html
+++ b/en/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
+﻿<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="688efcc0fe3196fa99fa94d6" data-wf-site="687744ac7f4aefd284fc3f12">
 <head>
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
   <link href="../css/calma-website.webflow.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
-  <link href="../images/webclip.jpg" rel="apple-touch-icon">`n  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>`n  <script type="module">`n    import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';`n    inject();`n  </script>
+  <link href="../images/webclip.jpg" rel="apple-touch-icon">  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>  <script type="module">    import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';   inject();  </script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
   // Initialize Lenis on the #scroll-container div
@@ -102,13 +102,13 @@
         <div class="line nav"></div>
         <div class="right-align-div">
           <div class="mobile-menu-middle-div">
-            <a href="https://calma-website.webflow.io/en/about#ceo-message" class="page-link w-inline-block">
+            <a href="about.html#ceo-message" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading">CEO’s Message</h4>
             </a>
-            <a href="https://calma-website.webflow.io/en/about#leadership" class="page-link w-inline-block">
+            <a href="about.html#leadership" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading">Leadership</h4>
             </a>
-            <a href="https://calma-website.webflow.io/en/about#corporate-culture" class="page-link w-inline-block">
+            <a href="about.html#corporate-culture" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading">Corporate Culture</h4>
             </a>
             <a href="../en/guarantees.html" class="page-link w-inline-block">
@@ -219,13 +219,13 @@
     </div>
     <div class="line footer"></div>
     <div class="footer-middle-div">
-      <a href="https://calma-website.webflow.io/en/about#ceo-message" class="footer-text-div w-inline-block">
+      <a href="about.html#ceo-message" class="footer-text-div w-inline-block">
         <h4 class="footer-text financing">CEO’s Message</h4>
       </a>
-      <a href="https://calma-website.webflow.io/en/about#leadership" class="footer-text-div w-inline-block">
+      <a href="about.html#leadership" class="footer-text-div w-inline-block">
         <h4 class="footer-text">Leadership</h4>
       </a>
-      <a href="https://calma-website.webflow.io/en/about#corporate-culture" class="footer-text-div w-inline-block">
+      <a href="about.html#corporate-culture" class="footer-text-div w-inline-block">
         <h4 class="footer-text">Corporate Culture</h4>
       </a>
       <a href="../en/guarantees.html" class="footer-text-div w-inline-block">
