--- a/typography.html
+++ b/typography.html
@@ -12,7 +12,7 @@
   <link href="css/calma-website.webflow.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
-  <link href="images/webclip.jpg" rel="apple-touch-icon">`n  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>`n  <script type="module">`n    import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';`n    inject();`n  </script>
+  <link href="images/webclip.jpg" rel="apple-touch-icon">  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>  <script type="module">   import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';   inject();  </script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
   // Initialize Lenis on the #scroll-container div
