Update Vercel analytics implementation to use inject() function instead of React component across all pages

--- a/en/home.html
+++ b/en/home.html
@@ -1039,5 +1039,9 @@
   });
 });
 </script>
+  <script type="module">
+    import { inject } from '@vercel/analytics';
+    inject();
+  </script>
 </body>
 </html>
