--- a/index.html
+++ b/index.html
@@ -1040,5 +1040,9 @@
   });
 });
 </script>
+  <script type="module">
+    import { inject } from '@vercel/analytics';
+    inject();
+  </script>
 </body>
 </html>
