--- a/about.html
+++ b/about.html
@@ -1309,9 +1309,6 @@
     });
   });
 </script>
-  <script type="module">
-    import { inject } from '@vercel/analytics';
-    inject();
-  </script>
+  <script defer src="https://va.vercel-scripts.com/v1/script.debug.js"></script>
 </body>
 </html>
