--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
-  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
-  <script defer src="https://cdn.vercel-insights.com/v1/speed-insights/script.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
-  // Initialize Lenis on the #scroll-container div
-  const lenis = new Lenis({
+  // Initialize Lenis on the #scroll-container div with error handling
+  try {
+    const lenis = new Lenis({
     wrapper: document.querySelector('#scroll-container'),  // your scroll wrapper
     content: document.querySelector('#scroll-container'),  // your scroll content (same div)
     duration: 1.2,
@@ -55,6 +55,9 @@
   // Refresh ScrollTrigger after setup (important)
   ScrollTrigger.addEventListener("refresh", () => lenis.update());
   ScrollTrigger.refresh();
+  } catch (error) {
+    console.warn('Lenis initialization failed:', error);
+  }
 </script>
   <style>
   .cta-image-wrapper {
@@ -326,7 +329,7 @@
                 <div class="sub-heading-div arabic">
                   <h4 class="sub-heading arabic">.هنا تزدهر الإمكانيات</h4>
                   <div class="grid-para-wrapper">
-                    <p class="paragraph dark arabic"> في كالما، لا نبني مجرد مشاريع، بل نبني مجتمعات تنبض بالحياة ، وتتجاوز حدود التوقع.  بُنيت رؤيتنا لتنسج بين تنوع الثقافات وعمق التقاليد المحلية، لنصنع بيئة يشعر فيها المواطن بالانتماء. من قلب الرياض، إلى امتداد المملكة...نُصيغ تعريف جديد للانتماء.</p>
+                    <p class="paragraph dark arabic"> في كالما، لا نبني مجرد مشاريع، بل نبني مجتمعات تنبض بالحياة ، وتتجاوز حدود التوقع. بُنيت رؤيتنا لتنسج بين تنوع الثقافات وعمق التقاليد المحلية، لنصنع بيئة يشعر فيها المواطن بالانتماء. من قلب الرياض، إلى امتداد المملكة...نُصيغ تعريف جديد للانتماء.</p>
                   </div>
                 </div>
                 <div class="stats-div">
