--- a/en/home.html
+++ b/en/home.html
@@ -1041,6 +1041,7 @@
 });
 </script>
   <script src="../js/touch-enhancements.js"></script>
+  <script src="../js/slider-enhancements.js"></script>
   <script defer src="https://va.vercel-scripts.com/v1/script.debug.js"></script>
 </body>
 </html>
