--- a/en/projects.html
+++ b/en/projects.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sun Aug 24 2025 11:03:42 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="688efcabf86eae615638bff5" data-wf-site="687744ac7f4aefd284fc3f12">
 <head>
   <meta charset="utf-8">
@@ -1394,5 +1394,6 @@
   });
 });
 </script>
+<script src="../js/slider-enhancements.js"></script>
 </body>
 </html>
