--- a/en/guarantees.html
+++ b/en/guarantees.html
@@ -12,7 +12,7 @@
   <link href="../css/calma-website.webflow.css" rel="stylesheet" type="text/css">
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
-  <link href="../images/webclip.jpg" rel="apple-touch-icon">
+  <link href="../images/webclip.jpg" rel="apple-touch-icon">  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>  <script type="module">    import { inject } from 'https://cdn.skypack.dev/@vercel/speed-insights';   inject();  </script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
   // Initialize Lenis on the #scroll-container div
@@ -102,13 +102,13 @@
         <div class="line nav"></div>
         <div class="right-align-div">
           <div class="mobile-menu-middle-div">
-            <a href="https://calma-website.webflow.io/en/about#ceo-message" class="page-link w-inline-block">
+            <a href="about.html#ceo-message" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading">CEO’s Message</h4>
             </a>
-            <a href="https://calma-website.webflow.io/en/about#leadership" class="page-link w-inline-block">
+            <a href="about.html#leadership" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading">Leadership</h4>
             </a>
-            <a href="https://calma-website.webflow.io/en/about#corporate-culture" class="page-link w-inline-block">
+            <a href="about.html#corporate-culture" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading">Corporate Culture</h4>
             </a>
             <a href="../en/guarantees.html" aria-current="page" class="page-link w-inline-block w--current">
@@ -201,13 +201,13 @@
     </div>
     <div class="line footer"></div>
     <div class="footer-middle-div">
-      <a href="https://calma-website.webflow.io/en/about#ceo-message" class="footer-text-div w-inline-block">
+      <a href="about.html#ceo-message" class="footer-text-div w-inline-block">
         <h4 class="footer-text financing">CEO’s Message</h4>
       </a>
-      <a href="https://calma-website.webflow.io/en/about#leadership" class="footer-text-div w-inline-block">
+      <a href="about.html#leadership" class="footer-text-div w-inline-block">
         <h4 class="footer-text">Leadership</h4>
       </a>
-      <a href="https://calma-website.webflow.io/en/about#corporate-culture" class="footer-text-div w-inline-block">
+      <a href="about.html#corporate-culture" class="footer-text-div w-inline-block">
         <h4 class="footer-text">Corporate Culture</h4>
       </a>
       <a href="../en/guarantees.html" aria-current="page" class="footer-text-div w-inline-block w--current">
