--- a/en/home.html
+++ b/en/home.html
@@ -13,6 +13,8 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="../images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="../images/webclip.jpg" rel="apple-touch-icon">
+  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
+  <script defer src="https://cdn.vercel-insights.com/v1/speed-insights/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
   // Initialize Lenis on the #scroll-container div
@@ -150,13 +152,13 @@
         <div class="line nav"></div>
         <div class="right-align-div">
           <div class="mobile-menu-middle-div">
-            <a href="https://calma-website.webflow.io/en/about#ceo-message" class="page-link w-inline-block">
+            <a href="about.html#ceo-message" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading">CEO’s Message</h4>
             </a>
-            <a href="https://calma-website.webflow.io/en/about#leadership" class="page-link w-inline-block">
+            <a href="about.html#leadership" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading">Leadership</h4>
             </a>
-            <a href="https://calma-website.webflow.io/en/about#corporate-culture" class="page-link w-inline-block">
+            <a href="about.html#corporate-culture" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading">Corporate Culture</h4>
             </a>
             <a href="../en/guarantees.html" class="page-link w-inline-block">
@@ -376,7 +378,7 @@
               </div>
               <div class="center-logo-calma"><img src="../images/FULL-LOCKUP-07.png" loading="lazy" sizes="(max-width: 767px) 100vw, (max-width: 991px) 727.9375px, 939.96875px" srcset="../images/FULL-LOCKUP-07-p-500.png 500w, ../images/FULL-LOCKUP-07-p-800.png 800w, ../images/FULL-LOCKUP-07-p-1080.png 1080w, ../images/FULL-LOCKUP-07-p-1600.png 1600w, ../images/FULL-LOCKUP-07-p-2000.png 2000w, ../images/FULL-LOCKUP-07-p-2600.png 2600w, ../images/FULL-LOCKUP-07-p-3200.png 3200w, ../images/FULL-LOCKUP-07.png 4953w" alt="" class="image"></div>
               <div class="center-button-wrapper">
-                <a data-w-id="1bb70f99-1577-4d92-1000-b95ac0c49f3e" href="https://calma-website.webflow.io/about#vision" class="button grey w-button">Discover Our vision</a>
+                <a data-w-id="1bb70f99-1577-4d92-1000-b95ac0c49f3e" href="about.html#vision" class="button grey w-button">Discover Our vision</a>
               </div>
             </div>
           </div>
@@ -495,7 +497,7 @@
             <div class="left-align-div">
               <div class="corpoorate-para-wrapper en">
                 <p class="paragraph dark">Behind every CALMA development lies a culture of unwavering excellence and purposeful innovation. Our team doesn&#x27;t just construct buildings – we cultivate communities where thoughtful spaces create lasting value.</p>
-                <a data-w-id="b7d80389-44d3-0d89-b348-c101c71dc929" href="https://calma-website.webflow.io/about#corporate-culture" class="button dark w-button">Discover more</a>
+                <a data-w-id="b7d80389-44d3-0d89-b348-c101c71dc929" href="about.html#corporate-culture" class="button dark w-button">Discover more</a>
               </div>
             </div>
           </div>
@@ -559,13 +561,13 @@
         </div>
         <div class="line footer"></div>
         <div class="footer-middle-div">
-          <a href="https://calma-website.webflow.io/en/about#ceo-message" class="footer-text-div w-inline-block">
+          <a href="about.html#ceo-message" class="footer-text-div w-inline-block">
             <h4 class="footer-text financing">CEO’s Message</h4>
           </a>
-          <a href="https://calma-website.webflow.io/en/about#leadership" class="footer-text-div w-inline-block">
+          <a href="about.html#leadership" class="footer-text-div w-inline-block">
             <h4 class="footer-text">Leadership</h4>
           </a>
-          <a href="https://calma-website.webflow.io/en/about#corporate-culture" class="footer-text-div w-inline-block">
+          <a href="about.html#corporate-culture" class="footer-text-div w-inline-block">
             <h4 class="footer-text">Corporate Culture</h4>
           </a>
           <a href="../en/guarantees.html" class="footer-text-div w-inline-block">
@@ -1037,5 +1039,9 @@
   });
 });
 </script>
+  <script type="module">
+    import { inject } from '@vercel/analytics';
+    inject();
+  </script>
 </body>
 </html>
