--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.jpg" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.jpg" rel="apple-touch-icon">
+  <script defer src="https://cdn.vercel-insights.com/v1/script.debug.js"></script>
+  <script defer src="https://cdn.vercel-insights.com/v1/speed-insights/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@studio-freight/lenis@1.0.26/bundled/lenis.min.js"></script>
   <script>
   // Initialize Lenis on the #scroll-container div
@@ -79,8 +81,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    z-index: 9999;
+    z-index: 1000;
     pointer-events: none;
+  }
+  
+  /* Ensure preloader stays behind mobile menu on mobile devices */
+  @media (max-width: 991px) {
+    #preloader {
+      z-index: 500;
+    }
   }
   #preloader-logo {
     width: 120px;
@@ -150,13 +159,13 @@
         <div class="line nav"></div>
         <div class="right-align-div">
           <div class="mobile-menu-middle-div">
-            <a href="https://calma-website.webflow.io/about#ceo-message" class="page-link w-inline-block">
+            <a href="about.html#ceo-message" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading arabic">كلمة رئيس مجلس الإدارة</h4>
             </a>
-            <a href="https://calma-website.webflow.io/about#leadership" class="page-link w-inline-block">
+            <a href="about.html#leadership" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading arabic">القيادة</h4>
             </a>
-            <a href="https://calma-website.webflow.io/about#corporate-culture" class="page-link w-inline-block">
+            <a href="about.html#corporate-culture" class="page-link w-inline-block">
               <h4 class="mobile-nav-heading arabic">ثقافة الشركة</h4>
             </a>
             <a href="guarantees.html" class="page-link w-inline-block">
@@ -323,7 +332,8 @@
                 <div class="sub-heading-div arabic">
                   <h4 class="sub-heading arabic">.هنا تزدهر الإمكانيات</h4>
                   <div class="grid-para-wrapper">
-                    <p class="paragraph dark arabic"> في كالما، لا نبني مجرد مشاريع، بل نبني مجتمعات تنبض بالحياة ، وتتجاوز حدود التوقع.  بُنيت رؤيتنا لتنسج بين تنوع الثقافات وعمق التقاليد المحلية، لنصنع بيئة يشعر فيها المواطن بالانتماء. من قلب الرياض، إلى امتداد المملكة...نُصيغ تعريف جديد للانتماء.</p>
+                    <p class="paragraph dark arabic"> في كالما، لا نبني مجرد مشاريع، بل نبني مجتمعات تنبض بالحياة ، وتتجاوز حدود التوقع.
+ بُنيت رؤيتنا لتنسج بين تنوع الثقافات وعمق التقاليد المحلية، لنصنع بيئة يشعر فيها المواطن بالانتماء. من قلب الرياض، إلى امتداد المملكة...نُصيغ تعريف جديد للانتماء.</p>
                   </div>
                 </div>
                 <div class="stats-div">
@@ -378,7 +388,7 @@
               </div>
               <div class="center-logo-calma"><img src="images/FULL-LOCKUP-07.png" loading="lazy" sizes="100vw" srcset="images/FULL-LOCKUP-07-p-500.png 500w, images/FULL-LOCKUP-07-p-800.png 800w, images/FULL-LOCKUP-07-p-1080.png 1080w, images/FULL-LOCKUP-07-p-1600.png 1600w, images/FULL-LOCKUP-07-p-2000.png 2000w, images/FULL-LOCKUP-07-p-2600.png 2600w, images/FULL-LOCKUP-07-p-3200.png 3200w, images/FULL-LOCKUP-07.png 4953w" alt="" class="image"></div>
               <div class="center-button-wrapper">
-                <a data-w-id="1bb70f99-1577-4d92-1000-b95ac0c49f3e" href="https://calma-website.webflow.io/about#vision" class="button grey arabic w-button">تعرف على رؤيتنا</a>
+                <a data-w-id="1bb70f99-1577-4d92-1000-b95ac0c49f3e" href="about.html#vision" class="button grey arabic w-button">تعرف على رؤيتنا</a>
               </div>
             </div>
           </div>
@@ -496,7 +506,7 @@
             <div class="left-align-div arabic">
               <div class="corpoorate-para-wrapper">
                 <p class="paragraph dark arabic"> خلف كل مشروع من مشاريع كالما ثقافة راسخة من التفرد اللامحدود والتميز الهادف  يعمل فريقنا على بناء ما هو أكثر من مباني كل يوم عن طريق بناء مجتمعات متكاملة وتصميم مساحات بعناية تامة لتمنح قيمة دائمة عبر الزمن.</p>
-                <a data-w-id="b7d80389-44d3-0d89-b348-c101c71dc929" href="https://calma-website.webflow.io/about#corporate-culture" class="button dark arabic w-button">تعرف على ثقافتنا</a>
+                <a data-w-id="b7d80389-44d3-0d89-b348-c101c71dc929" href="about.html#corporate-culture" class="button dark arabic w-button">تعرف على ثقافتنا</a>
               </div>
             </div>
           </div>
@@ -566,13 +576,13 @@
           <a href="guarantees.html" class="footer-text-div w-inline-block">
             <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d"> الضمانات</h4>
           </a>
-          <a href="https://calma-website.webflow.io/about#corporate-culture" class="footer-text-div w-inline-block">
+          <a href="about.html#corporate-culture" class="footer-text-div w-inline-block">
             <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d">ثقافة الشركة</h4>
           </a>
-          <a href="https://calma-website.webflow.io/about#leadership" class="footer-text-div w-inline-block">
+          <a href="about.html#leadership" class="footer-text-div w-inline-block">
             <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d leadership">القيادة</h4>
           </a>
-          <a href="https://calma-website.webflow.io/about#ceo-message" class="footer-text-div w-inline-block">
+          <a href="about.html#ceo-message" class="footer-text-div w-inline-block">
             <h4 class="footer-text w-variant-a9356c2d-7d5c-d892-b6ac-befbbf58de0d ceo">كلمة رئيس مجلس الإدارة</h4>
           </a>
         </div>
@@ -1038,5 +1048,9 @@
   });
 });
 </script>
+  <script type="module">
+    import { inject } from '@vercel/analytics';
+    inject();
+  </script>
 </body>
 </html>
